add api register user
