# hackathon/authentication-app/internal/DTOs/auth_dto.go
@@ -1,6 +1,10 @@
 package dto
 
-import "time"
+import (
+	"time"
+
+	"github.com/google/uuid"
+)
 
 type RegisterRequest struct {
 	Username string `json:"username" validate:"required,min=3,max=20"`
@@ -19,8 +23,8 @@ type AuthResponse struct {
 }
 
 type UserInfo struct {
-	ID       uint   `json:"id"`
-	Username string `json:"username"`
+	ID       uuid.UUID `json:"id"`
+	Username string    `json:"username"`
 }
 
 type RevokeTokenRequest struct {
